# fairytale-chatbot

./: .dockerignore  .env_sample  .gitignore  README.md  pyproject.toml  streamlit_app.py
src/: api.py  streamlit_app.py
src/v2/: llm_chain.py  params.py  prompt.py  retriever.py  router.py  service.py  tts.py  utils.py
src/v3/: bad_words.txt  bad_words_filter.py  bert_cefr.py  ebook_loader.py  l2sca.py  llm_chain.py  params.py  prompt.py  retriever.py  router.py  service.py  tts.py  utils.py
